# MCP-SQLlite-Client-Modular-Connection-Prototype

./: Readme.md
SQLlite/mcp-client/: .env  pyproject.toml
SQLlite/sqlite/: pyproject.toml
SQLlite/sqlite/src/mcp_server_sqlite/: test.db
Weather/mcp-client/: .env  client.py
